Producing Parameterised Reports using {purrr} and {quarto}
Reprex of a workflow for producing parameterised reports using the {nycflights13} dataset (second attempt to get map2 to work)

--- a/parameterised_quarto_report.qmd
+++ b/parameterised_quarto_report.qmd
@@ -420,6 +420,8 @@ This code must be saved in the form of a separate R script.
 
 The {purrr} package helps to iteratively produce a report for every unique element of each specified parameter. 
 
+### One input
+
 Use purrr:map() to iteratively produce a report for each element of one input.
 
 ```{r}
@@ -431,6 +433,8 @@ Use purrr:map() to iteratively produce a report for each element of one input.
 #| label: specify parameter(s) using the quarto::quarto_render() function in R - one input
 
 # for one input, create runparams function with one input: origin ------------------------
+
+# create function to run a report against every subcategory of one variable, e.g. origin airport
 
 runparams_one_input <- function(origin) {
   quarto::quarto_render(
@@ -445,15 +449,15 @@ runparams_one_input <- function(origin) {
 
 runparams_one_input(origin = "JFK")
 
-# to run a report against every subcategory of a variable, e.g. origin airport
+# execute with purrr:map() function
 
 params_origin <- unique(flights$origin)
-
-# execute with purrr:map() function
 
 purrr::map(params_origin, runparams_one_input)
 
 ```
+
+### Two inputs
 
 Use purrr:map2() to iteratively produce a report for each element of two different inputs.
 
@@ -467,6 +471,8 @@ Use purrr:map2() to iteratively produce a report for each element of two differe
 
 # for two inputs, create runparams function with two inputs: origin and month -------------
 
+# create function to run a report against every subcategory of two variables, e.g. both origin airport and month
+
 runparams_two_inputs <- function(origin, month) {
   quarto::quarto_render(
     "parameterised_quarto_report.qmd",
@@ -476,15 +482,13 @@ runparams_two_inputs <- function(origin, month) {
   )
 }
 
-# to run a report against every subcategory of two variables, e.g. both origin airport and month
-
-params_origin <- unique(flights$origin)
-
-params_month <- unique(flights$month)
-
 # execute with purrr:map2() function
+# https://stackoverflow.com/questions/54256790/is-there-a-way-i-can-recycle-elements-of-the-shorter-list-in-purrr-map2-or-pur
 
-purrr::map2(params_origin, params_month, runparams_two_inputs)
+x <- unique(flights$origin)
+y <- unique(flights$month)
+l <- max(length(y), length(x))
+purrr::map2(rep(x,len = l), rep(y,len = l),runparams_two_inputs)
 
 ```
 
